--- a/bigwork_meta/src/main/resources/application.yaml
+++ b/bigwork_meta/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ server:
   port: 8082  # 应用程序运行的端口号
   servlet:
     context-path: /meta
+spring:
   datasource:
     username: root
     password: "chen160213497"
@@ -10,3 +11,6 @@ server:
     driver-class-name: com.mysql.cj.jdbc.Driver
 swagger:
   enable: true
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.starter.bigwork_meta.model
