--- a/bigwork_starter/pom.xml
+++ b/bigwork_starter/pom.xml
@@ -14,6 +14,7 @@
         <spring-boot.version>2.5.6</spring-boot.version>
         <springfox.version>2.9.2</springfox.version>
 
+
     </properties>
     <dependencies>
         <dependency>
@@ -22,10 +23,20 @@
             <version>${springfox.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+
+        </dependency>
+        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${springfox.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
