--- a/bigwork_meta/pom.xml
+++ b/bigwork_meta/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>bigwork_starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
 
     </dependencies>
