--- a/bigwork_meta/pom.xml
+++ b/bigwork_meta/pom.xml
@@ -11,7 +11,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.5.6</spring-boot.version>
+        <spring-boot.version>2.7.15</spring-boot.version>
     </properties>
     <dependencies>
         <dependency>
@@ -21,8 +21,13 @@
         </dependency>
         <dependency>
             <groupId>cn.dev33</groupId>
-            <artifactId>sa-token-spring-boot-starter</artifactId>
-            <version>1.9.0</version>
+            <artifactId>sa-token-reactor-spring-boot-starter</artifactId>
+            <version>1.39.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.4.22</version> <!-- 请根据需要选择合适的版本 -->
         </dependency>
         <dependency>
             <groupId>com.starter</groupId>
