--- a/bigwork_starter/pom.xml
+++ b/bigwork_starter/pom.xml
@@ -11,7 +11,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.5.6</spring-boot.version>
+        <spring-boot.version>2.7.15</spring-boot.version>
         <springfox.version>2.9.2</springfox.version>
 
 
@@ -22,7 +22,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>3.1.9</version>
         </dependency>
-
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-reactor-spring-boot-starter</artifactId>
+            <version>1.39.0</version>
+        </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
@@ -34,10 +38,7 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${springfox.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
