重构项目，添加全局异常处理机制，修复无法正常运行的问题

--- a/bigwork_meta/pom.xml
+++ b/bigwork_meta/pom.xml
@@ -15,5 +15,12 @@
             <artifactId>bigwork_starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+
+        </dependency>
+
     </dependencies>
 </project>
