--- a/bigwork_meta/src/main/resources/application.yml
+++ b/bigwork_meta/src/main/resources/application.yml
@@ -10,7 +10,9 @@ spring:
     url: jdbc:mysql://localhost:3306/big_work_db?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     # sa-token配置
-
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 swagger:
   enable: true
 mybatis:
