项目引入redis，增加redis相关工具类，增加登录验证码校验服务

--- a/bigwork_starter/pom.xml
+++ b/bigwork_starter/pom.xml
@@ -46,6 +46,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <!--spring-boot-redis所需依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
