--- a/bigwork_meta/pom.xml
+++ b/bigwork_meta/pom.xml
@@ -20,6 +20,11 @@
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-spring-boot-starter</artifactId>
         </dependency>
+            <dependency>
+                <groupId>com.github.whvcse</groupId>
+                <artifactId>easy-captcha</artifactId>
+                <version>1.6.2</version>
+            </dependency>
 
 
     </dependencies>
