--- a/bigwork_meta/src/main/resources/application.yml
+++ b/bigwork_meta/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  redis:
+    host: localhost
+    port: 6379  # 默认端口
 swagger:
   enable: true
 mybatis:
