聊天相关接口，查询好友列表

--- a/bigwork_apitest/src/main/resources/application.yml
+++ b/bigwork_apitest/src/main/resources/application.yml
@@ -13,4 +13,4 @@ swagger:
   enable: true
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
-  type-aliases-package: com.starter.bigwork_apitest.model
+  type-aliases-package: com.bigwork.bigwork_apitest.model
