--- a/bigwork_apitest/pom.xml
+++ b/bigwork_apitest/pom.xml
@@ -15,5 +15,9 @@
             <artifactId>bigwork_starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency>
     </dependencies>
 </project>
