异常处理与result同步

--- a/bigwork_apitest/src/main/resources/application.yaml
+++ b/bigwork_apitest/src/main/resources/application.yaml
@@ -14,3 +14,6 @@ swagger:
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.starter.bigwork_apitest.model
+
+Netty:
+  port: 8084
