--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -3,7 +3,7 @@ name: Docker Build and Deploy
 on:
   push:
     branches:
-        - iteration/*  # 只在 main 分支的 push 事件触发
+      - iteration/*  # 只在 iteration/* 分支的 push 事件触发
 
 jobs:
   build-and-push:
@@ -34,19 +34,22 @@ jobs:
         with:
           context: ./bigwork_meta  # Docker 构建上下文
           push: true  # 推送镜像到 Docker Hub
-          tags: monet12345/bigwork_meta:latest  # 镜像标签
+          tags: monet12345/bigwork_meta:meta  # 镜像标签
 
       - name: Build and push bigwork_apitest image
         uses: docker/build-push-action@v2
         with:
           context: ./bigwork_apitest  # Docker 构建上下文
           push: true  # 推送镜像到 Docker Hub
-          tags: monet12345/bigwork_apitest:latest  # 镜像标签
+          tags: monet12345/bigwork_apitest:apitest  # 镜像标签
 
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push  # 依赖 build-and-push 任务
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2  # 拉取代码
+
       - name: Deploy to server
         uses: appleboy/ssh-action@master  # 使用 SSH 连接到服务器
         with:
@@ -54,7 +57,6 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}  # 服务器用户名
           password: ${{ secrets.SERVER_PASSWORD }}  # 服务器密码
           script: |
-            docker pull monet12345/bigwork_meta:latest  # 拉取最新镜像
-            docker pull monet12345/bigwork_apitest:latest  # 拉取最新镜像
+            cd bigwork  # 进入项目目录
             docker-compose down  # 停止当前运行的容器
             docker-compose up -d  # 启动新的容器
