--- a/bigwork_meta/pom.xml
+++ b/bigwork_meta/pom.xml
@@ -3,8 +3,8 @@
         <modelVersion>4.0.0</modelVersion>
         <parent>
             <groupId>com.starter</groupId>
-            <artifactId>bigwork_starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <artifactId>bigwork-starter-boot</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </parent>
         <artifactId>bigwork_meta</artifactId>
         <name>bigwork_meta</name>
@@ -19,6 +19,7 @@
             <dependency>
                 <groupId>cn.dev33</groupId>
                 <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>1.39.0</version>
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
@@ -34,6 +35,11 @@
             <dependency>
                 <groupId>cn.dev33</groupId>
                 <artifactId>sa-token-oauth2</artifactId>
+                <version>1.39.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
             </dependency>
         </dependencies>
 
@@ -65,7 +71,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring-boot.version}</version>
+                    <version>2.7.3</version>
                     <configuration>
                         <mainClass>com.bigwork.bigwork_meta.BigworkMetaApplication</mainClass>
                     </configuration>
