--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -18,6 +18,14 @@ jobs:
           distribution: 'temurin'
           java-version: '17'  # 设置 Java 17 环境
 
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository  # 缓存 Maven 本地仓库
+          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}  # 根据 pom.xml 文件生成缓存键
+          restore-keys: |
+            maven-${{ runner.os }}-
+
       - name: Build with Maven
         run: |
           cd bigwork_starter && mvn clean install  # 先构建并安装 bigwork_starter
