--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -21,16 +21,21 @@ jobs:
       - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.m2/repository  # 缓存 Maven 本地仓库
-          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}  # 根据 pom.xml 文件生成缓存键
+          path: ~/.m2/repository
+          key: maven-Linux-${{ hashFiles('**/pom.xml') }}  # 基于 pom.xml 的哈希值
           restore-keys: |
-            maven-${{ runner.os }}-
+            maven-Linux-  # 通用缓存键
+
+      - name: Configure Maven settings
+        run: |
+          mkdir -p ~/.m2
+          echo "<settings><servers><server><id>my-repo</id><username>${{ secrets.MAVEN_REPO_USERNAME }}</username><password>${{ secrets.MAVEN_REPO_PASSWORD }}</password></server></servers></settings>" > ~/.m2/settings.xml
 
       - name: Build with Maven
         run: |
-          cd bigwork_starter && mvn clean install  # 先构建并安装 bigwork_starter
-          cd ../bigwork_meta && mvn clean package  # 再构建 bigwork_meta
-          cd ../bigwork_apitest && mvn clean package  # 最后构建 bigwork_apitest
+          cd bigwork_starter && mvn clean install -U -e -X  # 强制更新 SNAPSHOT 依赖并启用详细日志
+          cd ../bigwork_meta && mvn clean package -U -e -X
+          cd ../bigwork_apitest && mvn clean package -U -e -X
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
