--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Build with Maven
         run: |
           ls -R  # 打印目录结构，检查路径
-          cd bigwork_starter && mvn clean install -e -X
+          cd bigwork_starter && mvn clean install -e -X  # 启用详细日志
           cd ../bigwork_meta && mvn clean package -e -X
-          cd ../bigwork_apitest && mvn clean package  # 最后构建 bigwork_apitest
+          cd ../bigwork_apitest && mvn clean package -e -X
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
