--- a/bigwork_meta/pom.xml
+++ b/bigwork_meta/pom.xml
@@ -6,6 +6,7 @@
             <artifactId>bigwork-starter-boot</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </parent>
+        <packaging>jar</packaging>
         <artifactId>bigwork_meta</artifactId>
         <name>bigwork_meta</name>
         <description>bigwork_meta</description>
@@ -13,7 +14,7 @@
             <dependency>
                 <groupId>com.starter</groupId>
                 <artifactId>bigwork_starter</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
+                <version>1.0.0-SNAPSHOT</version>
             </dependency>
             <!-- Sa-Token 权限认证，在线文档：https://sa-token.cc -->
             <dependency>
@@ -43,47 +44,5 @@
             </dependency>
         </dependencies>
 
-        <build>
-            <plugins>
-                <!-- Maven 编译器插件 -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version> <!-- 更新到最新版本 -->
-                    <configuration>
-                        <source>11</source>
-                        <target>11</target>
-                        <encoding>UTF-8</encoding>
-                    </configuration>
-                </plugin>
 
-                <!-- Maven 资源插件 -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.3.1</version> <!-- 更新到最新版本 -->
-                    <configuration>
-                        <encoding>UTF-8</encoding>
-                    </configuration>
-                </plugin>
-
-                <!-- Spring Boot Maven 插件 -->
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>2.7.3</version>
-                    <configuration>
-                        <mainClass>com.bigwork.bigwork_meta.BigworkMetaApplication</mainClass>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>repackage</id>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </build>
     </project>
