--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
     <artifactId>bigwork-starter-boot</artifactId> <!-- 你的项目ID -->
     <version>1.0.0-SNAPSHOT</version> <!-- 项目版本号 -->
     <packaging>pom</packaging> <!-- 打包方式，可以是 jar、war 等 -->
-
+    <modules>
+        <module>bigwork_starter</module>
+        <module>bigwork_meta</module>
+        <module>bigwork_apitest</module>
+    </modules>
     <!-- 父项目 -->
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -17,7 +21,7 @@
 
     <!-- 项目属性 -->
     <properties>
-        <java.version>1.8</java.version> <!-- Java 版本 -->
+        <java.version>11</java.version> <!-- Java 版本 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- 编码 -->
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -51,6 +55,16 @@
     <!-- 构建配置 -->
     <build>
         <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <source>11</source>
+                        <target>11</target>
+                    </configuration>
+                </plugin>
+
             <!-- Spring Boot Maven 插件 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
