--- a/bigwork_starter/pom.xml
+++ b/bigwork_starter/pom.xml
@@ -1,15 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.starter</groupId>
+
     <artifactId>bigwork_starter</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>bigwork_starter</name>
     <description>bigwork_starter</description>
-
+    <parent>
+        <groupId>com.starter</groupId>
+        <artifactId>bigwork-starter-boot</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.7.3</spring-boot.version>
