--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
+version: '3.8'
+
 services:
   redis:
     image: redis:latest
     container_name: redis
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data  # 持久化 Redis 数据
     networks:
       - app-network
 
