--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: redis:latest
     container_name: redis
     ports:
-      - "6379:6380"
+      - "6380:6379"  # 将宿主机的 6380 端口映射到容器的 6379 端口
     volumes:
       - redis_data:/data  # 持久化 Redis 数据
     networks:
@@ -21,7 +21,7 @@ services:
       - "8084:8084"
     environment:
       SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: "6380"
+      SPRING_REDIS_PORT: "6379"  # 连接到 Redis 容器的 6379 端口
     depends_on:
       - redis
     networks:
@@ -36,7 +36,7 @@ services:
       - "8083:8083"
     environment:
       SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: "6380"
+      SPRING_REDIS_PORT: "6379"  # 连接到 Redis 容器的 6379 端口
     depends_on:
       - redis
     networks:
