--- a/bigwork_apitest/src/main/resources/application.yml
+++ b/bigwork_apitest/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
     context-path: /apitest
 spring:
   datasource:
-    username: root
+    username: fangchen
     password: "chen160213497"
     url: jdbc:mysql://localhost:3306/big_work_db?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     driver-class-name: com.mysql.cj.jdbc.Driver
