--- a/bigwork_apitest/Dockerfile
+++ b/bigwork_apitest/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
 # 复制构建好的 JAR 文件到容器
-COPY ../target/bigwork_apitest-1.0.0-SNAPSHOT.jar bigwork_apitest-1.0.0-SNAPSHOT.jar
+COPY /target/bigwork_apitest-1.0.0-SNAPSHOT.jar bigwork_apitest-1.0.0-SNAPSHOT.jar
 
 # 暴露端口
 EXPOSE 8083
