--- a/bigwork_meta/pom.xml
+++ b/bigwork_meta/pom.xml
@@ -43,6 +43,30 @@
                 <artifactId>lombok</artifactId>
             </dependency>
         </dependencies>
-
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.11.0</version>
+                    <configuration>
+                        <source>${java.version}</source> <!-- 使用属性中的 JDK 版本 -->
+                        <target>${java.version}</target> <!-- 使用属性中的 JDK 版本 -->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>2.7.3</version> <!-- 使用你的 Spring Boot 版本 -->
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
 
     </project>
