--- a/bigwork_starter/pom.xml
+++ b/bigwork_starter/pom.xml
@@ -139,11 +139,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version> <!-- 兼容 JDK 1.8 的版本 -->
+                <version>3.11.0</version>
                 <configuration>
-                    <source>1.8</source> <!-- 明确指定 JDK 1.8 -->
-                    <target>1.8</target> <!-- 明确指定 JDK 1.8 -->
-                    <encoding>UTF-8</encoding> <!-- 设置编码为 UTF-8 -->
+                    <source>${java.version}</source> <!-- 使用属性中的 JDK 版本 -->
+                    <target>${java.version}</target> <!-- 使用属性中的 JDK 版本 -->
                 </configuration>
             </plugin>
         </plugins>
