--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -71,5 +71,10 @@ jobs:
           script: |
             cd bigwork  # 进入项目目录
             cd bigwork
-            docker-compose down  # 停止当前运行的容器
+            git fetch origin  # 从远程仓库获取最新代码
+            git checkout ${{ github.ref_name }}  # 切换到指定分支（例如 iteration/your-branch）
+            git pull origin  ${{ github.ref_name }}  # 拉取最新代码
+            docker-compose down --remove-orphans  # 停止并删除容器
+            docker-compose pull  # 拉取最新镜像
             docker-compose up -d  # 启动新的容器
+            docker-compose logs -f  # 查看日志
