--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -76,6 +76,7 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}  # 服务器密码
           script: |
             cd bigwork  # 进入项目目录
+            cd bigwork
             git fetch origin  # 从远程仓库获取最新代码
             git checkout ${{ steps.extract-branch.outputs.branch_name }}  # 动态切换到当前分支
             git pull origin ${{ steps.extract-branch.outputs.branch_name }}  # 动态拉取当前分支的最新代码
