--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -65,6 +65,7 @@ jobs:
         run: |
           # 从 GITHUB_REF 中提取分支名称
           BRANCH_NAME=$(echo $GITHUB_REF | sed 's/refs\/heads\///')
+          echo $GITHUB_REF
           echo "Extracted branch name: $BRANCH_NAME"
           echo "::set-output name=branch_name::$BRANCH_NAME"
 
@@ -78,7 +79,7 @@ jobs:
           script: |
             cd bigwork/bigwork  # 进入项目目录
             git fetch origin  # 从远程仓库获取最新代码
-            git reset --hard
+            git reset --hard 
             git checkout ${{ steps.extract-branch.outputs.branch_name }}  # 动态切换到当前分支
             git pull origin ${{ steps.extract-branch.outputs.branch_name }}  # 动态拉取当前分支的最新代码
             docker-compose down --remove-orphans  # 停止并删除容器
