--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Build sources
         run: |
+          git status
           mvn clean install -e
 
       - name: Log in to Docker Hub
